--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -36,12 +36,12 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add data/resorts.json
+          git add data/resorts.json data/hotel_price_history.json
 
           if git diff --staged --quiet; then
             echo "No changes to commit."
             exit 0
           fi
 
-          git commit -m "chore: update resorts data"
+          git commit -m "chore: update resorts + hotel price history"
           git push
