--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -3,7 +3,7 @@ name: Update Ski Data (prices + open km)
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: "0 7 * * *" # cada día 07:00 UTC
+    - cron: '0 7 * * *' # cada día 07:00 UTC
 
 permissions:
   contents: write
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: '20'
 
       - name: Install deps
         run: npm ci
@@ -36,7 +36,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add data/resorts.json data/hotel_price_history.json
+          git add data/resorts.json data/hotel_price_history.json data/open_km_history.json
 
           if git diff --staged --quiet; then
             echo "No changes to commit."
